2007-01-16  Tomas Frydrych  <tf@openedhand.com>
	
	* clutter/clutter-fixed.h:
	Added integer ClutterAngle type, protype of clutter_angle_sin and
	convenience macros clutter_fixed_cos and clutter_angle_cos
	* clutter/clutter-fixed.c: 
	(clutter_fixed_sin):
	Fixed to work for negative angles.
	(clutter_angle_sin):
	Fast fixed point sin function for ClutterAngle angles.
	* clutter/clutter-alpha.c: 
	(clutter_sin_func, clutter_sin_inc_func):
	Changed to use clutter_angle_sin function.
	
2007-01-15  Tomas Frydrych  <tf@openedhand.com>
	
	* clutter/clutter-fixed.h: (CLUTTER_FIXED_TO_DOUBLE/FLOAT):
	Fixed macro so it works for negative values.
	* clutter/clutter-fixed.c: (clutter_fixed_sin):
	Implemented fixed point sin function.
	* clutter/clutter-alpha.c: (clutter_sin_func, clutter_sin_inc_func):
	Pluged in fixed point sin function.
	
2007-01-07  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c: (clutter_actor_allocate_coords):
	Fix an amazingly not noticed until now typo.
	Minor doc tweaks.

	* clutter/clutter-behaviour-opacity.c:
	(clutter_behaviour_alpha_notify):
	Take into account initial opacity value when calculating from alpha.  

	* clutter/clutter-group.c:
	Add new get_nth_child() and get_n_children() api calls.

2007-01-04  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	Add new set_width/height API calls.
	Tweak scaling by reseting matrix.
	Make set_opactiy() take parent opacity into account.
	Fix clipping.

	* clutter/clutter-alpha.c:
	Add more sine functionality.

	* clutter/clutter-behaviour-opacity.c:
	Dont make a copy of all applied actors but use a foreach()

	* clutter/clutter-behaviour-scale.c:
	Give correct limits to propertys. 
	Tweak gravity a little more. 
	Update docs. 
:
	* clutter/clutter-behaviour.c: (clutter_behaviour_remove):
	Minor warning text change.

	* clutter/clutter-feature.c: (clutter_feature_wait_for_vblank):
	Minor dri ioctl tweak.

	* clutter/clutter-label.c: