@@ -1,8 +1,9 @@
 2007-01-16  Tomas Frydrych  <tf@openedhand.com>
 	
 	* clutter/clutter-fixed.h:
-	Added integer ClutterAngle type, protype of clutter_angle_sin and
-	convenience macros clutter_fixed_cos and clutter_angle_cos
+	Added integer ClutterAngle type, protype of clutter_angle_sin,
+	convenience macros clutter_fixed_cos and clutter_angle_cos, plus
+	other convenience macros for commonly used constants and ops.
 	* clutter/clutter-fixed.c: 
 	(clutter_fixed_sin):
 	Fixed to work for negative angles.
@@ -11,6 +12,12 @@
 	* clutter/clutter-alpha.c: 
 	(clutter_sin_func, clutter_sin_inc_func):
 	Changed to use clutter_angle_sin function.
+	* clutter-behavior-path.c:
+	replaced floating point with fixed point operations
+	* clutter/clutter-color.c: 
+	* clutter/clutter-color.h:
+	Added (clutter_color_shadex), replaced floating point operations
+	with fixed point
 	
 2007-01-15  Tomas Frydrych  <tf@openedhand.com>
 	
